{ add } Landing Page

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main id="root"></main>
   </body>
+  <script src="https://kit.fontawesome.com/e4acb4060a.js"></script>
 </html>
